syntax = "proto3";

option csharp_namespace = "BlogGrpc";

import "google/protobuf/timestamp.proto";

package postcrud;

import "google/protobuf/empty.proto";

message Category {
  int32 id = 1;
  string name = 2;
}


service CategoryCrud {
  rpc GetAll (EmptyCategory) returns (stream Category);
  rpc GetById (GetCategoryById) returns (Category);
  rpc Add (Category) returns (Category);
  rpc Update (Category) returns (Category);
  rpc Remove (GetCategoryById) returns (EmptyCategory);
}

message GetCategoryById {
  int32 id = 1;
}

message EmptyCategory {
  // No need for an actual field, just indicate it's empty
}
